[gd_scene load_steps=27 format=2]

[ext_resource path="res://Sprites/frog_sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/jump_power_scale_outline_ui.png" type="Texture" id=3]
[ext_resource path="res://Sprites/jump_power_scale_ui.png" type="Texture" id=4]
[ext_resource path="res://Sounds/prepare_jump.ogg" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 6, 6, 35, 2 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 0, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 600, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 100, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 200, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 300, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 400, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 500, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 600, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 100, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 200, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 19 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "prepare_jump",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "jump",
"speed": 10.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "land",
"speed": 10.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "quack",
"speed": 10.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 18 ) ],
"loop": false,
"name": "blink",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=24]
radius = 13.0

[sub_resource type="CircleShape2D" id=25]
radius = 8.51469

[node name="Player" type="KinematicBody2D" groups=["Player"]]
position = Vector2( 0, -100 )
script = ExtResource( 2 )

[node name="JumpScale" type="Node2D" parent="."]
visible = false

[node name="Outline" type="Sprite" parent="JumpScale"]
position = Vector2( 0, -46 )
texture = ExtResource( 3 )

[node name="Scale" type="Sprite" parent="JumpScale"]
position = Vector2( -18, -48 )
texture = SubResource( 20 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 35, 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -50, -77 )
frames = SubResource( 16 )
animation = "idle"
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -11 )
shape = SubResource( 24 )

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -5 )
shape = SubResource( 25 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -1, -77 )
current = true
limit_smoothed = true
smoothing_enabled = true

[node name="PrepareJumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -17.69
pitch_scale = 1.16
bus = "Effects"

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="timeout" from="CoyoteJumpTimer" to="." method="_on_CoyoteJumpTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
